--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
         "spatie/laravel-ignition": ">=1.0",
         "minigyima/warden": "dev-master",
         "php": "^8.3",
-        "laravel/octane": "^2.2"
+        "laravel/octane": "^2.2",
+        "spatie/async": "^1.6",
+        "spatie/file-system-watcher": "^1.1",
+        "laravel/prompts": "^0.1.13"
     },
     "license": "MIT",
     "autoload": {
@@ -39,6 +42,7 @@
         "boot": [
             "@php artisan aurora:boot --ansi"
         ]
+
     },
     "repositories": [
         {
