Revised mercury runtime

--- a/src/Stubs/docker/app/Dockerfile
+++ b/src/Stubs/docker/app/Dockerfile
@@ -77,6 +77,7 @@ COPY mercury.sh /
 COPY mercury_debug.sh /
 COPY mercury_swoole.sh /
 COPY mercury_kill.sh /
+COPY mercury /mercury
 COPY artisan.sh /usr/sbin/artisan
 RUN chmod +x /usr/sbin/artisan
 RUN chmod 777 /mercury.sh /mercury_debug.sh /mercury_swoole.sh /mercury_kill.sh
