--- a/src/Stubs/docker/web/nginx.conf
+++ b/src/Stubs/docker/web/nginx.conf
@@ -43,6 +43,22 @@ server {
         try_files $uri $uri/ @mercury;
     }
 
+    location /realtime/ {
+        proxy_http_version 1.1;
+        proxy_set_header Host $http_host;
+        proxy_set_header Scheme $scheme;
+        proxy_set_header SERVER_PORT $server_port;
+        proxy_set_header REMOTE_ADDR $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+
+        proxy_pass http://172.128.4.8:6001/;
+        proxy_read_timeout 60;
+        proxy_connect_timeout 60;
+        proxy_redirect off;
+    }
+
     location = /favicon.ico {
         access_log off; log_not_found off;
     }
