--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         "laravel/sanctum": "^3.3",
         "symfony/yaml": "^7.0",
         "laravel/horizon": "^5.21",
-        "ext-pcntl": "*",
-        "czproject/git-php": "^4.2"
+        "ext-pcntl": "*"
     },
     "license": "MIT",
     "autoload": {
