--- a/src/Stubs/docker/prod/supervisord/supervisord-00-main.conf
+++ b/src/Stubs/docker/prod/supervisord/supervisord-00-main.conf
@@ -3,4 +3,4 @@ nodaemon=true
 user=root
 logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
-environment=POSTGRES_USER="%(ENV_POSTGRES_USER)s",POSTGRES_PASSWORD="%(ENV_POSTGRES_PASSWORD)s",POSTGRES_DB="%(ENV_POSTGRES_DB)s"
+environment=POSTGRES_USER="%(ENV_POSTGRES_USER)s",POSTGRES_PASSWORD="%(ENV_POSTGRES_PASSWORD)s",POSTGRES_DB="%(ENV_POSTGRES_DB)s",PM2_HOME="/srv/www/.pm2"
