--- a/src/Stubs/docker/prod/nginx.conf
+++ b/src/Stubs/docker/prod/nginx.conf
@@ -1,88 +1,116 @@
-map $http_upgrade $connection_upgrade {
-    default upgrade;
-    '' close;
+user aurora;
+worker_processes auto;
+pid /run/nginx.pid;
+include /etc/nginx/modules-enabled/*.conf;
+
+events {
+    worker_connections 1024;
 }
 
-# Expires map
-map $sent_http_content_type $expires {
-    default off;
-    text/html 24h;
-    text/css 24h;
-    application/javascript 24h;
-    ~image/ 24h;
-}
+http {
+    # Upgrade map
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
 
-server {
-    error_log /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
-    client_max_body_size 100M;
+    # Expires map
+    map $sent_http_content_type $expires {
+        default off;
+        text/html 24h;
+        text/css 24h;
+        application/javascript 24h;
+        ~image/ 24h;
+    }
 
-    listen 80 default_server;
-    server_tokens off;
-    root /srv/www/public;
-    index index.php;
-    expires $expires;
-    charset utf-8;
+    sendfile on;
+    tcp_nopush on;
+    types_hash_max_size 2048;
+
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
+    ssl_prefer_server_ciphers on;
+
+    access_log /var/log/nginx/fpm-access.log;
+    error_log /var/log/nginx/fpm-error.log;
 
     gzip on;
-    gzip_disable "msie6";
 
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_buffers 16 8k;
-    gzip_http_version 1.1;
-    gzip_min_length 0;
-    gzip_types text/plain application/javascript text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype;
+    server {
+        error_log /var/log/nginx/error.log;
+        access_log /var/log/nginx/access.log;
+        client_max_body_size 100M;
 
-    location /index.php {
-        try_files /not_exists @mercury;
-    }
+        listen 80 default_server;
+        server_tokens off;
+        root /srv/www/public;
+        index index.php;
+        expires $expires;
+        charset utf-8;
 
-    location / {
-        try_files $uri $uri/ @mercury;
-    }
+        gzip on;
+        gzip_disable "msie6";
 
-    location /realtime/ {
-        proxy_http_version 1.1;
-        proxy_set_header Host $http_host;
-        proxy_set_header Scheme $scheme;
-        proxy_set_header SERVER_PORT $server_port;
-        proxy_set_header REMOTE_ADDR $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
+        gzip_vary on;
+        gzip_proxied any;
+        gzip_comp_level 6;
+        gzip_buffers 16 8k;
+        gzip_http_version 1.1;
+        gzip_min_length 0;
+        gzip_types text/plain application/javascript text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype;
 
-        proxy_pass http://172.128.4.8:6001/;
-        proxy_read_timeout 60;
-        proxy_connect_timeout 60;
-        proxy_redirect off;
-    }
-
-    location = /favicon.ico {
-        access_log off; log_not_found off;
-    }
-    location = /robots.txt {
-        access_log off; log_not_found off;
-    }
-
-    error_page 404 /index.php;
-
-    location @mercury {
-        set $suffix "";
-
-        if ($uri = /index.php) {
-            set $suffix ?$query_string;
+        location /index.php {
+            try_files /not_exists @mercury;
         }
 
-        proxy_http_version 1.1;
-        proxy_set_header Host $http_host;
-        proxy_set_header Scheme $scheme;
-        proxy_set_header SERVER_PORT $server_port;
-        proxy_set_header REMOTE_ADDR $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_pass http://172.128.4.1$suffix;
+        location / {
+            try_files $uri $uri/ @mercury;
+        }
+
+        location /realtime/ {
+            proxy_http_version 1.1;
+            proxy_set_header Host $http_host;
+            proxy_set_header Scheme $scheme;
+            proxy_set_header SERVER_PORT $server_port;
+            proxy_set_header REMOTE_ADDR $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+
+            proxy_pass http://127.0.0.1:6001/;
+            proxy_read_timeout 60;
+            proxy_connect_timeout 60;
+            proxy_redirect off;
+        }
+
+        location = /favicon.ico {
+            access_log off; log_not_found off;
+        }
+        location = /robots.txt {
+            access_log off; log_not_found off;
+        }
+
+        error_page 404 /index.php;
+
+        location @mercury {
+            set $suffix "";
+
+            if ($uri = /index.php) {
+                set $suffix ?$query_string;
+            }
+
+            proxy_http_version 1.1;
+            proxy_set_header Host $http_host;
+            proxy_set_header Scheme $scheme;
+            proxy_set_header SERVER_PORT $server_port;
+            proxy_set_header REMOTE_ADDR $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_pass http://127.0.0.1:1018$suffix;
+        }
     }
 }
+
