--- a/src/Stubs/docker-compose.stub.yml
+++ b/src/Stubs/docker-compose.stub.yml
@@ -4,7 +4,6 @@ services:
   mercury:
     build: ./docker/app
     hostname: mercury
-    container_name: mercury
     image: mercury
     networks:
       aurora:
@@ -14,51 +13,44 @@ services:
       - 9000
     volumes:
       - './:/srv/www/'
+      - bootstrap_cache:/srv/www/bootstrap/cache
       - './storage/aurora/mercury/logs:/var/log'
       - './storage/aurora/mercury/root:/root'
     depends_on:
-      - postgres
       - router
-      - redis
-      - queue
-      - cron
 
   queue:
     build: ./docker/queue
     hostname: mercury-horizon
-    container_name: mercury-horizon
     networks:
       aurora:
         ipv4_address: 172.128.4.6
     tty: true
     volumes:
       - './:/srv/www/'
+      - bootstrap_cache:/srv/www/bootstrap/cache
       - './storage/aurora/mercury/logs:/var/log'
       - './storage/aurora/mercury/root:/root'
-    depends_on:
-      - postgres
-      - redis
+    profiles:
+      - queue
 
   cron:
     build: ./docker/cron
     hostname: mercury-cron
-    container_name: mercury-cron
     networks:
       aurora:
         ipv4_address: 172.128.4.7
     tty: true
     volumes:
       - './:/srv/www/'
+      - bootstrap_cache:/srv/www/bootstrap/cache
       - './storage/aurora/mercury/logs:/var/log'
       - './storage/aurora/mercury/root:/root'
-    depends_on:
-      - postgres
-      - redis
-      - queue
+    profiles:
+      - scheduler
 
   redis:
     image: redis:alpine
-    container_name: aurora-redis
     hostname: aurora-redis
     networks:
       aurora:
@@ -73,10 +65,11 @@ services:
       - './storage/aurora/mercury/root:/root'
       - './storage/aurora/mercury/cache/data:/data'
       - ./docker/cache:/redis
+    profiles:
+      - redis
 
   nginx:
     image: nginx:alpine
-    container_name: aurora-nginx
     hostname: aurora-nginx
     networks:
       aurora:
@@ -94,7 +87,6 @@ services:
 
   router:
     image: qoomon/docker-host
-    container_name: aurora-router
     hostname: aurora-router
     cap_add: [ 'NET_ADMIN', 'NET_RAW' ]
     restart: on-failure
@@ -104,10 +96,26 @@ services:
       aurora:
         ipv4_address: 172.128.4.4
 
-  postgres:
-    image: postgres:alpine
+  soketi:
+    image: quay.io/soketi/soketi:1.0-16-alpine
+    hostname: aurora-soketi
     restart: on-failure
-    container_name: aurora-postgres
+    volumes:
+      - './storage/aurora/mercury/logs:/var/log'
+      - './storage/aurora/mercury/root:/root'
+      - './storage/aurora/soketi:/soketi'
+    networks:
+      aurora:
+        ipv4_address: 172.128.4.8
+    command:
+      - exit 1
+    profiles:
+      - sockets
+    entrypoint: [ "sh", "-c", "touch /soketi/config.json && node /app/bin/server.js start --config /soketi/config.json" ]
+
+  postgres:
+    image: postgres:16-alpine
+    restart: on-failure
     hostname: aurora-postgres
     ports:
       - 127.0.0.1:5433:5432
@@ -122,10 +130,16 @@ services:
       POSTGRES_USER: CHANGEME
       POSTGRES_PASSWORD: CHANGEME
       POSTGRES_DB: aurora
+    profiles:
+      - database
 
 networks:
   aurora:
     driver: bridge
     ipam:
       config:
-        - subnet: 172.128.3.0/16
+        - subnet: 172.128.0.0/16
+
+volumes:
+  bootstrap_cache:
+    driver: local
