fix: Soketi now loads the correct config file in production

--- a/src/Stubs/docker/prod/supervisord/supervisord-70-soketi.conf
+++ b/src/Stubs/docker/prod/supervisord/supervisord-70-soketi.conf
@@ -1,5 +1,5 @@
 [program:soketi]
-command=pnpm soketi start /etc/soketi-config.json
+command=pnpm soketi start --config /etc/soketi-config.json
 directory=/srv/www
 user=aurora
 group=aurora
