feat: Horizon now waits for the bootstrap to complete before starting

--- a/src/Stubs/docker/queue/Dockerfile
+++ b/src/Stubs/docker/queue/Dockerfile
@@ -3,4 +3,7 @@ WORKDIR /srv/www/
 
 RUN pecl uninstall xdebug
 
-CMD ["php", "artisan", "mercury:boot-horizon"]
+COPY ./mercury_horizon.sh /usr/local/bin/mercury_horizon.sh
+RUN chmod +x /usr/local/bin/mercury_horizon.sh
+
+CMD ["bash", "/usr/local/bin/mercury_horizon.sh"]
