feat: Aurora cache driver

--- a/src/Stubs/docker/app/Dockerfile
+++ b/src/Stubs/docker/app/Dockerfile
@@ -76,6 +76,7 @@ RUN MAKEFLAGS="-j$(nproc)" pecl install redis
 #RUN MAKEFLAGS="-j$(nproc)" pecl install imagick
 RUN MAKEFLAGS="-j$(nproc)" pecl install xdebug
 RUN MAKEFLAGS="-j$(nproc)" pecl install openswoole-22.1.2
+RUN MAKEFLAGS="-j$(nproc)" pecl install apcu
 
 RUN git clone https://github.com/Imagick/imagick && \
     cd imagick && \
@@ -85,8 +86,7 @@ RUN git clone https://github.com/Imagick/imagick && \
     cd .. && \
     rm -rf imagick
 
-#RUN docker-php-ext-enable redis gd dom openswoole
-RUN docker-php-ext-enable redis imagick gd dom openswoole
+RUN docker-php-ext-enable redis imagick gd dom openswoole apcu
 
 RUN . /envfile; docker-php-ext-configure intl && docker-php-ext-install -j$PROC_COUNT intl
 
