feat: decoupled node_modules

--- a/src/Stubs/docker-compose.stub.yml
+++ b/src/Stubs/docker-compose.stub.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - './:/srv/www/'
       - bootstrap_cache:/srv/www/bootstrap/cache
+      - node_modules:/srv/www/node_modules
       - './storage/aurora/mercury/logs:/var/log'
       - './storage/aurora/mercury/root:/root'
     depends_on:
@@ -29,6 +30,7 @@ services:
     volumes:
       - './:/srv/www/'
       - bootstrap_cache:/srv/www/bootstrap/cache
+      - node_modules:/srv/www/node_modules
       - './storage/aurora/mercury/logs:/var/log'
       - './storage/aurora/mercury/root:/root'
     profiles:
@@ -44,6 +46,7 @@ services:
     volumes:
       - './:/srv/www/'
       - bootstrap_cache:/srv/www/bootstrap/cache
+      - node_modules:/srv/www/node_modules
       - './storage/aurora/mercury/logs:/var/log'
       - './storage/aurora/mercury/root:/root'
     profiles:
@@ -142,4 +145,7 @@ networks:
 
 volumes:
   bootstrap_cache:
+    driver: local
+
+  node_modules:
     driver: local
