feat: Mercury now includes a mysql driver

--- a/src/Stubs/docker/app/Dockerfile
+++ b/src/Stubs/docker/app/Dockerfile
@@ -59,6 +59,7 @@ RUN . /envfile; docker-php-ext-install -j$PROC_COUNT bcmath \
     exif \
     opcache \
     pdo_pgsql \
+    pdo_mysql \
     zip \
     pcntl \
     gd \
