--- a/src/Stubs/docker/prod/nginx.conf
+++ b/src/Stubs/docker/prod/nginx.conf
@@ -44,7 +44,7 @@ http {
         client_max_body_size 100M;
 
         listen 80 default_server;
-        listen unix:/tmp/aurora.sock;
+        listen unix:/tmp/aurora/aurora.sock;
         server_tokens off;
         root /srv/www/public;
         index index.php;
