(fix): removing sockets was a bad idea

--- a/src/Stubs/docker/app/Dockerfile
+++ b/src/Stubs/docker/app/Dockerfile
@@ -68,6 +68,7 @@ RUN . /envfile; docker-php-ext-install -j$PROC_COUNT bcmath \
     sysvmsg \
     sysvsem \
     sysvshm \
+    sockets \
     posix
 
 
