--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": "^8.3",
         "laravel/octane": "^2.2",
         "spatie/file-system-watcher": "^1.1",
-        "laravel/prompts": "^0.1.13",
+        "laravel/prompts": ">=0.1.13",
         "nette/php-generator": "^4.1",
         "laravel/sanctum": "^3.3",
         "symfony/yaml": "^7.0",
