--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         "illuminate/console": ">=10.0",
         "spatie/laravel-ignition": ">=1.0",
         "php": "^8.3",
-        "laravel/octane": "^2.2",
-        "spatie/file-system-watcher": "^1.1",
+        "laravel/octane": ">=2.2",
+        "spatie/file-system-watcher": ">=1.1",
         "laravel/prompts": ">=0.1.13",
         "nette/php-generator": "^4.1",
-        "laravel/sanctum": "^3.3",
+        "laravel/sanctum": ">=3.3",
         "symfony/yaml": "^7.0",
         "laravel/horizon": "^5.21",
         "ext-pcntl": "*",
