--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "illuminate/console": ">=10.0",
         "spatie/laravel-ignition": ">=1.0",
         "php": "^8.3",
-        "laravel/octane": ">=2.2",
+        "laravel/octane": "2.10.0",
         "spatie/file-system-watcher": ">=1.1",
         "laravel/prompts": ">=0.1.13",
         "nette/php-generator": "^4.1",
